--- a/package.json
+++ b/package.json
@@ -123,11 +123,15 @@
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-react-native": "3.3.0",
     "expose-loader": "0.7.5",
+    "file-loader": "^6.0.0",
     "flow-bin": "0.104.0",
     "imports-loader": "0.7.1",
     "jetifier": "1.6.4",
     "metro-react-native-babel-preset": "0.56.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "4.14.1",
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^9.0.2",
     "string-replace-loader": "2.1.1",
     "style-loader": "0.19.0",
     "unorm": "1.6.0",
