--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
 package-lock=true
+@fortawesome:registry=https://npm.fontawesome.com/
+//npm.fontawesome.com/:_authToken=012E4C8E-EB91-4448-8265-7B3E97EBDDCE
