--- a/static/pwa/manifest.json
+++ b/static/pwa/manifest.json
@@ -1,19 +1,19 @@
 {
   "android_package_name": "org.jitsi.meet",
-  "prefer_related_applications": true,
+  "prefer_related_applications": false,
   "related_applications": [
     {
       "id": "org.jitsi.meet",
       "platform": "chromeos_play"
     }
   ],
-  "short_name": "Jitsi Meet",
-  "name": "Jitsi Meet",
+  "short_name": "Belouga Live",
+  "name": "Belouga Live",
   "icons": [
     {
-      "src": "icons/icon192.png",
+      "src": "icons/apple-touch-icon.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "180x180"
     },
     {
       "src": "icons/icon512.png",
@@ -21,7 +21,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "icons/iconMask.png",
+      "src": "icons/icon512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
@@ -33,4 +33,3 @@
   "scope": "/",
   "theme_color": "#17A0DB"
  }
- 
